# flogging

./: CMakeLists.txt  Makefile
include/: flogging.h
src/: CMakeLists.txt  flogging.F90  flogging.f90
src/tests/: CMakeLists.txt  test_flogging.f90
